Bug 1558526 remove check for callable process() in registerProcessor() r=bzbarsky

Since https://github.com/WebAudio/web-audio-api/pull/2104

Differential Revision: https://phabricator.services.mozilla.com/D55227